# graphiti

./: docker-compose.yml  error_log.txt  output.txt
.agent/: dual_embedding_optimization.md
.agent/workflows/: dual-database-embedding.md
.tmp/: docker-compose.yml
examples/quickstart/: compare_neo4j_servers.py
graph4j/: .env.example  .gitignore  COMPARISON.md  DUAL_DATABASE_README.md  Dockerfile  EPISODES_API.md  EPISODES_QUICK_REF.md  HOW_TO_RUN.md  IMPLEMENTATION_SUMMARY.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  config.py  docker-compose.yml  dto.py  dual_embedding_graphiti.py  example_search.py  graphiti_client.py  main.py  pyproject.toml
graph4j/.agent/: dual_embedding_logic_trace.md
graph4j/.tmp/: clean_db.py  ingest.py  search.py  test_graph4j_api.py
graph4j/routers/: __init__.py  ingest.py  search.py
graphiti_core/: graphiti.py  graphiti_types.py
graphiti_core/driver/: neo4j_driver.py
graphiti_core/llm_client/: groq_client.py
neo4j_server/: Dockerfile  README.md  docker-compose.yml  n8n_examples.md  pyproject.toml  test_advanced.py  test_edges.py  test_server.py  view_facts_in_neo4j.md
neo4j_server/app/: __init__.py  client_factory.py  config.py  dto.py  graphiti_client.py  main.py
neo4j_server/app/routers/: __init__.py  delete.py  episodes.py  search.py
