[project]
name = "neo4j-server"
version = "0.1.0"
description = "Neo4j server for Graphiti with search and episode endpoints"
authors = [
    { "name" = "Graphiti Team" },
]
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi>=0.115.0",
    "graphiti-core[groq,google-genai]",
    "httpx>=0.28.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.30.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["neo4j_server"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E",
    "F",
    "UP",
    "B",
    "SIM",
    "I",
]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true

[tool.pyright]
include = ["."]
pythonVersion = "3.12"
typeCheckingMode = "basic"

